make some adjustments for rasperry pi

--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Playing around with Bluetooth communicaton",
   "main": "index.js",
   "scripts": {
+    "prestart": "babel scan-pi.js --presets es2015 --out-file scan-pi.compiled.js",
+    "start": "node scan-pi.compiled.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
     "bluetooth-serial-port": "^2.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0"
   }
 }
