--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
-    "bluetooth-serial-port": "^2.1.1"
+    "bluetooth-serial-port": "^2.1.1",
+    "rpio": "^0.9.15"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
