--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "prestart": "babel src --presets es2015 --out-dir dist",
     "start": "node dist/scan-pi.js",
-    "network": "node dist/scan-network.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "network": "npm run prestart && node dist/scan-network.js" 
   },
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
     "bluetooth-serial-port": "^2.1.1",
-    "node-libnmap": "^0.2.15",
+    "libnmap": "^0.3.9",
     "rpio": "^0.9.15"
   },
   "devDependencies": {
