copy files not compiled

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Playing around with Bluetooth communicaton",
   "main": "index.js",
   "scripts": {
-    "prestart": "babel src --presets es2015 --out-dir dist",
+    "prestart": "babel src --presets es2015 --out-dir dist --copy-files",
     "start": "node dist/scan-pi.js",
     "clean": "rm -rf dist node_modules",
     "network": "npm run prestart && node dist/scan-network.js"
