--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prestart": "babel src --presets es2015 --out-dir dist --copy-files",
     "start": "node dist/network/network-scan.js",
+    "nopi": "node dist/network/network-scan.js -nopi",
     "clean": "rm -rf dist node_modules"
   },
   "author": "Richie Casto",
